fix(Curriculums): increase column width for better visibility in curriculums table

--- a/src/styles.css
+++ b/src/styles.css
@@ -7896,7 +7896,7 @@ a.welcome-panel__notif-link:hover {
 
 .curriculums-page .curriculums-table th:nth-child(5),
 .curriculums-page .curriculums-table td:nth-child(5) {
-  width: 13rem;
+  width: 38rem;
 }
 
 .sections-page__header {
